	
	FIM NEWS -- history of main user-visible changes in FIM.

                Version 0.6-trunk

# (r1816)
 * Removed configure options --enable-c++11 -- use CXXFLAGS instead.
# (r1784,r1801)
 * Bugfix: 'autocmd_del' with no arguments would crash.
# (r1781)
 * Bugfix: Autocommand "PostHardcodedConfigLoading" will now trigger even execute even if --disable-fimrc .
# (r1771-r1773,r1776-r1777,r1781,r1783-r1785,r1789,r1792-r1796,r1803-r1806,r1808-r1809,r1813-r1815,r1818,r1822-r1823,r1827,r1831)
 * internal: considerably expanded 'make tests'.
# (r1770,r1772)
 * Add command 'stderr', similar to 'stdout'.
# (r1739,TODO)
 * This is the last FIM version supporting the C++03 standard.
# (r1731)
 * Refresh configure and Makefile templates.
# (r1729)
 * Build fixes for the MinGW environment.
# (r1752)
 * man fim: improve manual contents (on ~/.fim_history, etc.).
# (r1727)
 * man fimrc: added a section with default aliases,
# (r1724,r1738)
 * If possible, use 'timeout' in 'make tests'.
# (r1718-r1720,r1726,r1777-r1780)
 * Switch -K aka --chars-press <chars> simulates input of characters at startup.
# (r1709,r1710)
 * Fix: Slideshow function (e.g. `fim --slideshow=5 media/`) will now cycle forever, unless --once/-1 option specified (as in fbi).
# (r1707,r1711)
 * Fix: after 'quit' no command shall execute anymore (unless in -F).
# (r1705,r1759-r1760)
 * With SDL one can specify window size as percentage of allowed size (-o sdl=w55%), or draw a help grid map (-o sdl=h).
# (r1700)
 * With SDL (-o sdl), center window by default.
# (r1693)
 * fix: pressing keys "1n1n" will not execute 'n' 11 times but twice.
# (r1689)
 * configure --enable-debug is developer option now.
# (r1679-r1688,r1721-r1722,r1753-r1758,r1760,r1772,r1788,1797-1799,r1802)
 * libcaca (-o caca) mode is now working and is the default ASCII Art mode.
# (r1677,r1678,r1725)
 * Slideshow function (e.g `fim --slideshow=5 *.jpg`) now more responsive.
# (r1662)
 * Arrow keys are now working in aalib (-o aa).
# (r1649)